## v0.7.2:

* Enclose files/dirs to tar in 's.

## v0.7.1:

* Truncate long commit messages.

## v0.7.0:

* Adding catalog which will contain all heirloom regions & bases.
* CLI will lookup base & region from catalog.
* Removing base requirement for all subcmds outside download & setup.
* Added teardown command to delete domains & buckets.
* Enclosing simpledb domains in `s
* Added catalog subcommand to list available Heirlooms from catalog.
* Reducing log levels

### v0.6.1:

* Allowing engineer to specify region for metadata
* Ensuring metadata is in an upload region
* Split setup into seperate subcommand
* Perform additional validation on CLI options

## v0.5.0:

* Verify domain exists for all cmds except build & download
* Removing requirement to check simpledb on download.
* Adding requirement for base on download.
* Fix error when .heirloom.yml does not exist.
* Refactor cli option validation
* Refactor cli specs
* Add -x to download to extract heirloom to given output path
* Verify -o specified in download is a directory
* Requiring -d for builds (will no longer default to .)
* Remove new lines from values of git comments
* Verify directory given at build is a directory
* Support archiving directories outside the cwd.
* Fixed bug in git repo verification on build.
* Added support for encryption.
* Removed short name and changed long name for AWS CLI creds.
* Adding encrypted attribute by default for all builds.
* Change base_prefix CLI option to base
* Changed subcommands build -> upload, update -> tag
* Changed tag option updated_value -> value
* On upload, Heirloom will attempt to create buckets which do not exist.
* Will not destroy the sdb domain when cleanin up old versions on upload.
* Hard coding gem versions
* Validating email addresses in authorize

## v0.4.0:

* Prefixing domain name with heirloom_
* Adding CLI support for specific AWS creds
* Added specs
* Added support to delete domain when no records exist

## v0.3.1:
