@@ -1,6 +1,7 @@
 ## v0.7.2:
 
 * Enclose files/dirs to tar in 's.
+* Download the latest id if id not specified in download.
 
 ## v0.7.1:
 
